--- a/installers/msi-language/CustomExitDlg.wxs
+++ b/installers/msi-language/CustomExitDlg.wxs
@@ -15,24 +15,24 @@
 					<Condition Action="show">NOT Installed</Condition>
 				</Control>
 				<!-- Separate the checkbox from the text, so we can have transparent backgrounds as described here: https://stackoverflow.com/questions/15331351/how-to-remove-white-background-from-wix-button-and-checkbox-property/15331550#15331550 (Option 2)-->
-				<Control Id="StateToolWizardActionCheckBox" Type="CheckBox" X="130" Y="145" Width="10" Height="10" CheckBoxValue="1" Property="STATE_TOOL_WIZARD_CHECK_BOX" Hidden="yes">
+				<!--Control Id="StateToolWizardActionCheckBox" Type="CheckBox" X="130" Y="145" Width="10" Height="10" CheckBoxValue="1" Property="STATE_TOOL_WIZARD_CHECK_BOX" Hidden="yes">
 					<Condition Action="show">NOT Installed</Condition>
-				</Control>
+				</Control
 				<Control Id="StateToolWizardActionText" Type="Text" X="143" Y="145" Width="215" Height="25" Transparent="yes" Hidden="yes" Text="!(loc.ExitDialogStateToolAction)">
 					<Condition Action="show">NOT Installed</Condition>
-				</Control>
+				</Control-->
 
-				<Control Id="StateToolWizardReleaseNotesCheckBox" Type="CheckBox" X="130" Y="170" Width="10" Height="10" CheckBoxValue="1" Default="no" Property="STATE_TOOL_WIZARD_REL_NOTES_CHECK_BOX" Hidden="yes">
+				<Control Id="StateToolWizardReleaseNotesCheckBox" Type="CheckBox" X="130" Y="145" Width="10" Height="10" CheckBoxValue="1" Default="no" Property="STATE_TOOL_WIZARD_REL_NOTES_CHECK_BOX" Hidden="yes">
 					<Condition Action="show">NOT Installed</Condition>
 				</Control>
-				<Control Id="StateToolWizardReleaseNotesText" Type="Text" X="143" Y="170" Width="215" Height="25" Transparent="yes" Hidden="yes" Text="!(loc.ExitDialogReleaseNotesAction)">
+				<Control Id="StateToolWizardReleaseNotesText" Type="Text" X="143" Y="145" Width="215" Height="25" Transparent="yes" Hidden="yes" Text="!(loc.ExitDialogReleaseNotesAction)">
 					<Condition Action="show">NOT Installed</Condition>
 				</Control>
 
-				<Control Id="InstallVSCodeExtensionCheckbox" Type="CheckBox" X="130" Y="195" Width="10" Height="10" CheckBoxValue="1" Default="no" Property="INSTALL_VSCODE_EXT_CHECK_BOX" Hidden="yes">
+				<Control Id="InstallVSCodeExtensionCheckbox" Type="CheckBox" X="130" Y="170" Width="10" Height="10" CheckBoxValue="1" Default="no" Property="INSTALL_VSCODE_EXT_CHECK_BOX" Hidden="yes">
 					<Condition Action="show">NOT Installed AND CODE_INSTALLED = "true"</Condition>
 				</Control>
-				<Control Id="InstallVSCodeExtensionText" Type="Text" X="143" Y="195" Width="215" Height="25" Transparent="yes" Hidden="yes" Text="!(loc.ExitDialogVSCodeAction)">
+				<Control Id="InstallVSCodeExtensionText" Type="Text" X="143" Y="170" Width="215" Height="25" Transparent="yes" Hidden="yes" Text="!(loc.ExitDialogVSCodeAction)">
 					<Condition Action="show">NOT Installed AND CODE_INSTALLED = "true"</Condition>
 				</Control>
 			</Dialog>
