--- a/installers/msi-language/Product.p.wxs
+++ b/installers/msi-language/Product.p.wxs
@@ -17,6 +17,8 @@
 		<Property Id="CODE_INSTALLED" Value="false" />
 		<!-- End Configuration parameters -->
 
+		<Property Id="SESSION_ID" Value="unset" Secure="yes" Admin="yes" />
+
 		<PropertyRef Id="WIX_IS_NETFRAMEWORK_45_OR_LATER_INSTALLED"/>
 		<Condition Message="This application requires .NET Framework 4.5.0 or later. Please install the .NET Framework then run this installer again.  The installer can be downloaded from https://www.microsoft.com/en-us/download/details.aspx?id=42643.">
 			<![CDATA[Installed OR WIX_IS_NETFRAMEWORK_45_OR_LATER_INSTALLED]]>
@@ -176,8 +178,9 @@
 		<Property Id="IS_MODIFY" Value="false" Secure="yes"/>
 
 		<InstallUISequence>
-			<Custom Action="GAReportStart" After="AppSearch">NOT REMOVE~="ALL"</Custom>
 			<Custom Action="CommandsExist" After="CostFinalize">NOT REMOVE~="ALL"</Custom>
+			<Custom Action="SetSessionID" After="CostFinalize">1</Custom>
+			<Custom Action="GAReportStart" After="SetSessionID">NOT REMOVE~="ALL"</Custom>
 			<Custom Action="SetIsModify" After="CommandsExist">(Installed AND NOT (REMOVE~="ALL"))</Custom>
 			<Custom Action="SetInstallDirOnModify" After="SetIsModify">(Installed AND NOT (REMOVE~="ALL"))</Custom>
 		</InstallUISequence>
@@ -191,7 +194,7 @@
 		<CustomAction
 			Id="SetStateDeployPropertyValues"
 			Property="StateDeploy"
-			Value="INSTALLDIR=[INSTALLDIR];PROJECT_OWNER_AND_NAME=[PROJECT_OWNER_AND_NAME];IS_MODIFY=[IS_MODIFY];STATE_TOOL_INSTALLED=[STATE_TOOL_INSTALLED];STATE_TOOL_PATH=[STATE_TOOL_PATH];AS_USERNAME=[AS_USERNAME];AS_PASSWORD=[AS_PASSWORD];AS_TOTP=[AS_TOTP];UI_LEVEL=[UILevel];COMMIT_ID=[COMMIT_ID];PRODUCT_VERSION=[ProductVersion]"
+			Value="INSTALLDIR=[INSTALLDIR];PROJECT_OWNER_AND_NAME=[PROJECT_OWNER_AND_NAME];IS_MODIFY=[IS_MODIFY];STATE_TOOL_INSTALLED=[STATE_TOOL_INSTALLED];STATE_TOOL_PATH=[STATE_TOOL_PATH];AS_USERNAME=[AS_USERNAME];AS_PASSWORD=[AS_PASSWORD];AS_TOTP=[AS_TOTP];UI_LEVEL=[UILevel];COMMIT_ID=[COMMIT_ID];PRODUCT_VERSION=[ProductVersion];SESSION_ID=[SESSION_ID]"
 		/>
 		<CustomAction Id="SetUninstallProperties" Property="Uninstall" Value="PRESET=[PRESET];REMEMBER=[REMEMBER];REMEMBER_SHORTCUTDIR=[REMEMBER_SHORTCUTDIR];COMMIT_ID=[COMMIT_ID]" />
 		<CustomAction Id="SetPresetInfo" Property="Preset" Value="REL_NOTES=[REL_NOTES];INSTALLDIR=[INSTALLDIR];APP_START_MENU_PATH=[ApplicationProgramsFolder];PRESET=[PRESET];COMMIT_ID=[COMMIT_ID]" />
@@ -200,9 +203,6 @@
 
 		<Binary Id="GAPixelCA" SourceFile="$(var.GAPixel.TargetDir)$(var.GAPixel.TargetName).CA.dll" />
 		<CustomAction Id="GAPixel" Impersonate="yes" BinaryKey="GAPixelCA" DllEntry="SendPixel" Return="ignore" />
-
-		<Binary Id="S3PixelCA" SourceFile="$(var.S3Pixel.TargetDir)$(var.S3Pixel.TargetName).CA.dll" />
-		<CustomAction Id="S3Pixel" Impersonate="yes" BinaryKey="S3PixelCA" DllEntry="DownloadPixel" Return="ignore" />
 
 		<Binary Id="CommandsCA" SourceFile="$(var.StateCommandExists.TargetDir)$(var.StateCommandExists.TargetName).CA.dll" />
 		<CustomAction Id="CommandsExist" Impersonate="yes" BinaryKey="CommandsCA" DllEntry="CheckCommands" Return="check" />
@@ -217,7 +217,8 @@
 		<CustomAction Id="GAReportFailure" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportFailure" Execute="immediate" Return="ignore" />
 		<CustomAction Id="GAReportSuccess" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportSuccess" Execute="immediate" Return="ignore" />
 		<CustomAction Id="ValidateInstallFolder" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="ValidateInstallFolder" Execute="immediate" Return="check" />
-
+		<CustomAction Id="SetSessionID" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="SetSessionID" Execute="immediate" Return="check" />
+		
 		<Binary Id="PresetCA" SourceFile="$(var.Preset.TargetDir)$(var.Preset.TargetName).CA.dll" />
 		<CustomAction Id="Preset" Impersonate="no" BinaryKey="PresetCA" DllEntry="InstallPreset" Execute="deferred" Return="check" />
 
@@ -235,7 +236,6 @@
 			<Custom Action="StateDeploy" After="Rollback">NOT REMOVE~="ALL"</Custom>
 			<Custom Action="SetPresetInfo" After="CreateShortcuts">NOT REMOVE~="ALL"</Custom>
 			<Custom Action="Preset" After="SetPresetInfo">NOT REMOVE~="ALL"</Custom>
-			<Custom Action="S3Pixel" After="InstallFinalize">NOT REMOVE~="ALL"</Custom>
 			<Custom Action="GAReportSuccess" After="InstallFinalize">NOT REMOVE~="ALL"</Custom>
 			<Custom Action="SetUninstallProperties" After="RemoveFiles">REMOVE~="ALL"</Custom>
 			<Custom Action="Uninstall" After="SetUninstallProperties">REMOVE~="ALL"</Custom>
