Use registry to set installer properties

--- a/installers/msi-language/CustomFatalError.wxs
+++ b/installers/msi-language/CustomFatalError.wxs
@@ -21,10 +21,10 @@
 				<Control Id="CustomTextNetworkError" Type="Hyperlink" X="135" Y="70" Width="220" Height="60" Transparent="yes" Hidden="yes" Text="!(loc.NetworkErrorPrimary)">
 					<Condition Action="show">NETWORK_ERROR = "true"</Condition>
 				</Control>
-				<Control Id="CustomTextNetworkErrorDetails" Type="Hyperlink" X="135" Y="130" Width="220" Height="60" Transparent="yes" Hidden="yes" Text="!(loc.NetworkErrorDetails)">
+				<Control Id="CustomTextNetworkErrorDetails" Type="Hyperlink" X="135" Y="130" Width="220" Height="40" Transparent="yes" Hidden="yes" Text="!(loc.NetworkErrorDetails)">
 					<Condition Action="show">NETWORK_ERROR = "true"</Condition>
 				</Control>
-				<Control Id="CustomTextNetworkErrorReporting" Type="Hyperlink" X="135" Y="200" Width="220" Height="20" Transparent="yes" Hidden="yes" Text="!(loc.NetworkErrorReporting)">
+				<Control Id="CustomTextNetworkErrorReporting" Type="Hyperlink" X="135" Y="170" Width="220" Height="20" Transparent="yes" Hidden="yes" Text="!(loc.NetworkErrorReporting)">
 					<Condition Action="show">NETWORK_ERROR = "true"</Condition>
 				</Control>
 				<Control Id="Description2FatalError" Type="Text" X="135" Y="140" Width="220" Height="20" Transparent="yes" Hidden="yes" NoPrefix="yes" Text="!(loc.FatalErrorDescription2)">
@@ -33,11 +33,13 @@
 			</Dialog>
 
 			<InstallUISequence>
-				<Show Dialog="CustomFatalError" OnExit="error" Overridable="yes" />
+				<!-- Custom action that will display this dialog after setting property values -->
+				<Custom Action="SetNetworkError" OnExit="error">NOT REMOVE~="ALL"</Custom>
 			</InstallUISequence>
 
 			<AdminUISequence>
-				<Show Dialog="CustomFatalError" OnExit="error" Overridable="yes" />
+				<!-- Custom action that will display this dialog after setting property values -->
+				<Custom Action="SetNetworkError" OnExit="error">NOT REMOVE~="ALL"</Custom>
 			</AdminUISequence>
 		</UI>
 	</Fragment>
