--- a/installers/msi-language/Product.p.wxs
+++ b/installers/msi-language/Product.p.wxs
@@ -182,8 +182,7 @@
 
 		<InstallUISequence>
 			<Custom Action="CommandsExist" After="CostFinalize">NOT REMOVE~="ALL"</Custom>
-			<Custom Action="SetSessionID" After="CostFinalize">1</Custom>
-			<Custom Action="GAReportStart" After="SetSessionID">NOT REMOVE~="ALL"</Custom>
+			<Custom Action="SetSessionID" After="CostFinalize">NOT REMOVE~="ALL"</Custom>
 			<Custom Action="SetIsModify" After="CommandsExist">(Installed AND NOT (REMOVE~="ALL"))</Custom>
 			<Custom Action="SetInstallDirOnModify" After="SetIsModify">(Installed AND NOT (REMOVE~="ALL"))</Custom>
 		</InstallUISequence>
@@ -214,7 +213,6 @@
 
 		<Binary Id="StateDeployCA" SourceFile="$(var.StateDeploy.TargetDir)$(var.StateDeploy.TargetName).CA.dll" />
 		<CustomAction Id="StateDeploy" Impersonate="no" BinaryKey="StateDeployCA" DllEntry="StateDeploy" Execute="deferred" Return="check" />
-		<CustomAction Id="GAReportStart" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportStart" Execute="immediate" Return="ignore" />
 		<CustomAction Id="GAReportUserExit" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportUserExit" Execute="immediate" Return="ignore" />
 		<CustomAction Id="GAReportFailure" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportFailure" Execute="immediate" Return="ignore" />
 		<CustomAction Id="GAReportUserNetwork" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportUserNetwork" Execute="immediate" Return="ignore" />
@@ -222,7 +220,7 @@
 		<CustomAction Id="ValidateInstallFolder" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="ValidateInstallFolder" Execute="immediate" Return="check" />
 		<CustomAction Id="SetSessionID" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="SetSessionID" Execute="immediate" Return="check" />
 		<CustomAction Id="SetNetworkError" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="SetNetworkErrorProperties" Execute="immediate" Return="ignore" />
-		
+
 		<Binary Id="PresetCA" SourceFile="$(var.Preset.TargetDir)$(var.Preset.TargetName).CA.dll" />
 		<CustomAction Id="Preset" Impersonate="no" BinaryKey="PresetCA" DllEntry="InstallPreset" Execute="deferred" Return="check" />
 
