--- a/installers/msi-language/Product.p.wxs
+++ b/installers/msi-language/Product.p.wxs
@@ -20,7 +20,6 @@
 		<Property Id="MsiLogging" Value="Iwearucmopvx" />
 		<!-- End Configuration parameters -->
 
-		<Property Id="SESSION_ID" Value="unset" Secure="yes" Admin="yes" />
 		<Property Id="PRIVACY_ACCEPTED" Value="no" Secure="yes" Admin="yes" />
 
 		<PropertyRef Id="WIX_IS_NETFRAMEWORK_45_OR_LATER_INSTALLED"/>
@@ -182,7 +181,7 @@
 
 		<InstallUISequence>
 			<Custom Action="CommandsExist" After="CostFinalize">NOT REMOVE~="ALL"</Custom>
-			<Custom Action="SetSessionID" After="CostFinalize">NOT REMOVE~="ALL"</Custom>
+			<Custom Action="GAReportStart" After="CostFinalize">NOT REMOVE~="ALL"</Custom>
 			<Custom Action="SetIsModify" After="CommandsExist">(Installed AND NOT (REMOVE~="ALL"))</Custom>
 			<Custom Action="SetInstallDirOnModify" After="SetIsModify">(Installed AND NOT (REMOVE~="ALL"))</Custom>
 		</InstallUISequence>
@@ -196,7 +195,7 @@
 		<CustomAction
 			Id="SetStateDeployPropertyValues"
 			Property="StateDeploy"
-			Value="INSTALLDIR=[INSTALLDIR];PROJECT_OWNER_AND_NAME=[PROJECT_OWNER_AND_NAME];IS_MODIFY=[IS_MODIFY];STATE_TOOL_INSTALLED=[STATE_TOOL_INSTALLED];STATE_TOOL_PATH=[STATE_TOOL_PATH];AS_USERNAME=[AS_USERNAME];AS_PASSWORD=[AS_PASSWORD];AS_TOTP=[AS_TOTP];UI_LEVEL=[UILevel];COMMIT_ID=[COMMIT_ID];PRODUCT_VERSION=[ProductVersion];SESSION_ID=[SESSION_ID];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED];NETWORK_ERROR=[NETWORK_ERROR];NETWORK_ERROR_MESSAGE=[NETWORK_ERROR_MESSAGE];PRODUCT_NAME=[ProductName];USERSID=[UserSID]"
+			Value="INSTALLDIR=[INSTALLDIR];PROJECT_OWNER_AND_NAME=[PROJECT_OWNER_AND_NAME];IS_MODIFY=[IS_MODIFY];STATE_TOOL_INSTALLED=[STATE_TOOL_INSTALLED];STATE_TOOL_PATH=[STATE_TOOL_PATH];AS_USERNAME=[AS_USERNAME];AS_PASSWORD=[AS_PASSWORD];AS_TOTP=[AS_TOTP];UI_LEVEL=[UILevel];COMMIT_ID=[COMMIT_ID];PRODUCT_VERSION=[ProductVersion];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED];NETWORK_ERROR=[NETWORK_ERROR];NETWORK_ERROR_MESSAGE=[NETWORK_ERROR_MESSAGE];PRODUCT_NAME=[ProductName];USERSID=[UserSID]"
 		/>
 		<CustomAction Id="SetUninstallProperties" Property="Uninstall" Value="PRESET=[PRESET];REMEMBER=[REMEMBER];REMEMBER_SHORTCUTDIR=[REMEMBER_SHORTCUTDIR];COMMIT_ID=[COMMIT_ID];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED]" />
 		<CustomAction Id="SetPresetInfo" Property="Preset" Value="REL_NOTES=[REL_NOTES];INSTALLDIR=[INSTALLDIR];APP_START_MENU_PATH=[ApplicationProgramsFolder];PRESET=[PRESET];COMMIT_ID=[COMMIT_ID];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED]" />
@@ -218,7 +217,7 @@
 		<CustomAction Id="GAReportUserNetwork" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportUserNetwork" Execute="immediate" Return="ignore" />
 		<CustomAction Id="GAReportSuccess" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportSuccess" Execute="immediate" Return="ignore" />
 		<CustomAction Id="ValidateInstallFolder" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="ValidateInstallFolder" Execute="immediate" Return="check" />
-		<CustomAction Id="SetSessionID" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="SetSessionID" Execute="immediate" Return="check" />
+		<CustomAction Id="GAReportStart" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportStart" Execute="immediate" Return="check" />
 		<CustomAction Id="SetNetworkError" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="SetNetworkErrorProperties" Execute="immediate" Return="ignore" />
 
 		<Binary Id="PresetCA" SourceFile="$(var.Preset.TargetDir)$(var.Preset.TargetName).CA.dll" />
