--- a/installers/msi-language/Product.p.wxs
+++ b/installers/msi-language/Product.p.wxs
@@ -50,7 +50,7 @@
 						<RegistryValue Root='HKLM' Key='SOFTWARE\[Manufacturer]\[ProductName]' Type='string' Value='' KeyPath='yes' />
 					</Component>
 					<Directory Id="ProgramMenuFolder">
-						<Directory Id="ApplicationProgramsFolder" Name="{{.ProjectName}}"/>
+						<Directory Id="ApplicationProgramsFolder" Name="[ProductName]"/>
 					</Directory>
 				</Directory>
 			</Directory>
