--- a/installers/msi-language/CustomNetworkError.wxs
+++ b/installers/msi-language/CustomNetworkError.wxs
@@ -12,9 +12,9 @@
 				<Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Disabled="yes" Text="!(loc.WixUIBack)" />
 				<Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="0" />
 				<Control Id="Title" Type="Text" X="135" Y="20" Width="220" Height="60" Transparent="yes" NoPrefix="yes" Text="!(loc.FatalErrorTitle)" />
-				<Control Id="CustomTextNetworkError" Type="Text" X="135" Y="60" Width="220" Height="60" Transparent="yes" Hidden="yes" Text="!(loc.NetworkErrorPrimary)" />
-				<Control Id="CustomTextNetworkErrorDetails" Type="Text" X="135" Y="120" Width="220" Height="60" Transparent="yes" Hidden="yes" Text="!(loc.NetworkErrorDetails)" />
-				<Control Id="CustomTextNetworkErrorReporting" Type="Hyperlink" X="135" Y="190" Width="220" Height="20" Transparent="yes" Hidden="yes" Text="!(loc.NetworkErrorReporting)" />
+				<Control Id="CustomTextNetworkError" Type="Text" X="135" Y="60" Width="220" Height="60" Transparent="yes" Text="!(loc.NetworkErrorPrimary)" />
+				<Control Id="CustomTextNetworkErrorDetails" Type="Text" X="135" Y="120" Width="220" Height="60" Transparent="yes" Text="!(loc.ErrorDetails)" />
+				<Control Id="CustomTextNetworkErrorReporting" Type="Hyperlink" X="135" Y="190" Width="220" Height="20" Transparent="yes" Text="!(loc.ErrorReporting)" />
 			</Dialog>
 		</UI>
 	</Fragment>
